kube/exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exporter-pg
spec:
  selector:
    matchLabels:
      app: exporter-pg
  template:
    metadata:
      labels:
        app: exporter-pg
        app.kubernetes.io/name: exporter-pg
    spec:
      containers:
        - name: exporter-pg
          image: ghcr.io/diogo464/ipfs-telemetry/backend:latest
          args: ["vm-otlp-exporter"]
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "0"
            limits:
              memory: "256Mi"
              cpu: "1"
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
