kube/pg-crawler-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-crawler-exporter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pg-crawler-exporter
  template:
    metadata:
      labels:
        app: pg-crawler-exporter
        app.kubernetes.io/name: pg-crawler-exporter
    spec:
      containers:
        - name: pg-crawler-exporter
          image: ghcr.io/diogo464/ipfs-telemetry/backend:latest
          args: ["pg-crawler-exporter"]
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "0"
            limits:
              memory: "256Mi"
              cpu: "1"
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
