kube/crawler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: crawler
  template:
    metadata:
      labels:
        app: crawler
        app.kubernetes.io/name: crawler
    spec:
      containers:
        - name: crawler
          image: ghcr.io/diogo464/ipfs-telemetry/backend:latest
          args: ["crawler"]
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "0"
            limits:
              memory: "512Mi"
              cpu: "2"
          ports:
            - name: prometheus
              containerPort: 9090
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
---
apiVersion: v1
kind: Service
metadata:
  name: crawler
  labels:
    app.kubernetes.io/name: crawler
spec:
  selector:
    app.kubernetes.io/name: crawler
  ports:
    - name: prometheus
      port: 9090
      targetPort: prometheus
