kube/monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
spec:
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
        app.kubernetes.io/name: monitor
    spec:
      containers:
        - name: monitor
          image: ghcr.io/diogo464/ipfs-telemetry/backend:latest
          args: ["monitor"]
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "0"
            limits:
              memory: "2G"
              cpu: "1"
          ports:
            - name: prometheus
              containerPort: 9090
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
---
apiVersion: v1
kind: Service
metadata:
  name: monitor
  labels:
    app.kubernetes.io/name: monitor
spec:
  selector:
    app.kubernetes.io/name: monitor
  ports:
    - name: prometheus
      port: 9090
      targetPort: prometheus
