kube/pg.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  labels:
    app.kubernetes.io/name: postgres-lb
  annotations:
    service.infra.d464.sh/domain: "ipfs-pg.d464.sh"
spec:
  type: LoadBalancer
  selector:
    app: postgres-pg
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
